added automake files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 Makefile
-Makefile.in
+config.h
+config.status
+debian/tmp
+stamp-*
 .deps
 .libs
 *.o
@@ -8,18 +11,8 @@ Makefile.in
 *.la
 *.map
 *.pc
+*.log
 tags
-/configure
-/config.*
-/m4
-/missing
-/libtool
-/ltmain.sh
-/stamp-h1
-/install-sh
-/aclocal.m4
-/compile
-/depcomp
 /autom4te.cache
 /OpenIPMI.spec
 /include/OpenIPMI/ipmiif.h
